--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,4 +12,11 @@
   <% end %>
 </div>
 
+<hr>
+
+<%= simple_form_for([@restaurant, @review]) do |f| %>
+  <%= f.input :content %>
+  <%= f.button :submit %>
+<% end %>
+
 <%= link_to "Back to all restaurants", restaurants_path %>
